# Game

./: .gitignore  CMakeLists.txt  config.h.in  config.lua
include/: anim_sprite.hpp  collision.hpp  gh.hpp  input.hpp  random_generator.hpp  registry.hpp  textureatlas.hpp  ui_text.hpp
include/gh/: Anim_Sprite.hpp  AtlasSprite.hpp  Batchable.hpp  SpriteBatch.hpp  TextureAtlas.hpp  UI_Text.hpp
include/imgui/: imconfig.h
resources/: script.lua
resources/data/: lexicon.lua
src/cpp/: anim_sprite.cpp  imgui.cpp  input.cpp  main.cpp  random_generator.cpp  textureatlas.cpp  ui_text.cpp
src/cpp/gl/: Anim_Sprite.cpp  AtlasSprite.cpp  SpriteBatch.cpp  TextureAtlas.cpp  UI_Text.cpp
src/lua/: main.lua
src/lua/data/: entities.lua  map_generators.lua  map_types.lua  old_entities.lua  old_patterns.lua  old_systems.lua  patterns.lua  spritesheets.lua  systems.lua
src/lua/engine/: command.lua  debug.lua  generics.lua  imgui.lua  map.lua  old_ecs.lua  old_map.lua  quadtree.lua  state.lua  statemanager.lua  wavefunctioncollapse.lua
src/lua/engine/ecs/: entitymanager.lua  eventmanager.lua  init.lua  systemmanager.lua
src/lua/states/: fadebackfrommapswitch.lua  fadetoblackmapswitch.lua  map_editor.lua  menustate.lua  old_teststate.lua  playstate.lua  switchfloors.lua  teststate.lua
